# d2cv

./: .gitignore  .gitmodules  LICENSE  README.md
all-in-rag/: README.md  README_en.md
all-in-rag/Extra-chapter/: README.md
all-in-rag/Extra-chapter/Neo4J-Simple-Application/: readme.md
all-in-rag/Extra-chapter/PowerRAG-SDK-Text-QA/: readme.md
all-in-rag/Extra-chapter/multimodal-embedding-omni-practice/: readme.md
all-in-rag/Extra-chapter/multimodal-embedding-omni-practice/code/: 08_jina_embedding_omni.py  pyproject.toml
all-in-rag/code/C1/: 01_langchain_example.py  01_langchain_local.py  02_llamaIndex_example.py  02_llamaIndex_local.py
all-in-rag/code/C2/: 01_unstructured_example.py  01_unstructured_example2.py  01_unstructured_example3.py  02_character_splitter.py  03_recursive_character_splitter.py  05_langchain_example.py
all-in-rag/code/C3/: 01_bge_visualized.py  02_langchain_faiss.py  04_multi_milvus.py  04_multi_milvus_example2.py  05_SWR.py  06_recursive_retrieval.py
all-in-rag/code/C4/: 01_hybrid_search_v1.py  (+1 more)
all-in-rag/docs/: README.md  index.html
classic-model/code/: mlp.py  rnn.py  transformer.py
classic-model/docs/: mlp.md
d2llm/: llm_local_client.py  requirements.txt
d2llm/docs/: 3天从入门到精通LangChain 1.0+笔记.md
d2llm/langchain/: 02_api_key.py  03_model_deepseek.py  04_model_qwen.py  05_langchain_qwen.py  06_langchain_deepseek.py  07_local_model.py  08_mulit_chat.py  09_chat_robot.py  10_muilt_model.py  11_muilt_video.py  12_create_agent.py  13_first_agent.py.py  13_read_config.py  14_input_agent.py  15_asyncio_agent.py  langchain.md
(+63 files in other folders)
